force-app/main/default/objects/Hospital__c/fields/admitted_date__c.field-meta.xml
<CustomField>
    <fullName>admitted_date__c</fullName>
    <label>admitted_date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>