force-app/main/default/objects/Hospital__c/fields/discharge_date__c.field-meta.xml
<CustomField>
    <fullName>discharge_date__c</fullName>
    <label>discharge_date</label>
    <type>Date</type>
</CustomField>