force-app/main/default/objects/Hospital__c/fields/Hospital_id__c.field-meta.xml
<CustomField>
    <fullName>Hospital_id__c</fullName>
    <description>Hospital_id</description>
    <label>Hospital_id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>