force-app/main/default/objects/Hospital__c/fields/patient_id__c.field-meta.xml
<CustomField>
    <fullName>patient_id__c</fullName>
    <description>Patient that got addmitted to this hospital</description>
    <label>patient_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>